# math2docx

./: LICENSE  README.md  __init__.py  main.py  pyproject.toml
src/math2docx/: __init__.py
src/test/: example.py
